--- a/main.html
+++ b/main.html
@@ -7,6 +7,27 @@
 </head>
 
 <body>
+	<h1>Bali, Indonesia</h1>
+    <br>
+    <p>Bali is a stunning island known for its beautiful beaches, lush landscapes, and vibrant culture. It offers a unique blend of relaxation and adventure, making it a perfect destination for travelers seeking both tranquility and excitement.</p>
+
+    <h2>Top 5 Attractions</h2>
+    <ol>
+        <li><strong>Uluwatu Temple</strong> - A stunning sea temple perched on a cliff.</li>
+        <li><em>Mount Batur</em> - An active volcano that offers breathtaking sunrise treks.</li>
+        <li><strong>Rice Terraces of Tegallalang</strong> - Beautifully manicured rice paddies that showcase Bali's agricultural heritage.</li>
+        <li><em>Tanah Lot</em> - A picturesque sea temple known for its iconic sunset views.</li>
+        <li><strong>Seminyak Beach</strong> - A popular beach destination with vibrant nightlife and dining options.</li>
+    </ol>
+
+    <h2>Must-Try Foods</h2>
+    <ul>
+        <li><strong>Nasi Goreng</strong> - Indonesian fried rice, often served with chicken or seafood.</li>
+        <li><em>Sate Lilit</em> - Grilled minced meat skewers mixed with coconut and spices.</li>
+        <li><strong>Rendang</strong> - A spicy beef stew cooked with coconut milk and spices.</li>
+        <li><em>Gado-Gado</em> - A delicious salad made of boiled vegetables, tofu, and peanut sauce.</li>
+        <li><strong>Bebek Betutu</strong> - Slow-cooked duck stuffed with spices and wrapped in banana leaves.</li>
+    </ul>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
